Login, DB Search, Crash Detection
App.java:
	Moved everything into a try {} catch {} to protect against crashes. Message box tells you about the crash.
	Saves the DataBases on close, load DataBases on open.

DataBases:
	SearchData and getting leases by SearchData is written up (should work). Not yet tested. Investigate the SearchData class in DataBases

Enumerators:
	Added fromString() method to convert from string to that enumerator
	Added NONE type to some (to symbolize... NONE...)

Address/Lease/Listing/Room:
	Just added some stubs

Main Window (/Controller):
	User avatar/menu in top right.
	Welcome <username> label.
	Sets up the DataBase on load.

ArrayUtils:
	New contains method to check if data exists in an array
	Null checkers in add/remove

Exceptions:
	InvalidUserJSON: for when a JSONObject a User is loading from is missing the username

Range:
	Added within method to check if <type> data is within the range

Review:
	Null checking

Session:
	Keeps session (user login) information

TestCode:
	List users

Login Window: added
	You can login, and register via this window.

User:
	Add JSONObject checking, profilePictureURL property (for the profile photo on MainWindow)
	.equals now works (compares usernames)

AccountMenu (LoggedIn/LoggedOut):
	Popup menu (click user avatar) used to manage my account, view favorites, and log in/out

Listings.fxml:
	The listing 'window' (scene?)