@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.papa247</groupId>
     <artifactId>john</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
@@ -21,66 +21,47 @@ Offsite housing search tool
 
 Dependencies:
 SimpleJSON: an improved version of https://github.com/fangyidong/json-simple. It adds type safety, serialization, tidy formatting and improved performance.</description>
-    <developers>
-        <developer>
-            <id>C0Newb</id>
-            <name>Cody Newberry</name>
-            <roles>
-                <role>architect</role>
-                <role>developer</role>
-            </roles>
-            <timezone>-5</timezone>
-        </developer>
-        <developer>
-            <id>Clmeyers-Dev</id>
-            <name>Christopher Meyers</name>
-            <roles>
-                <role>architect</role>
-                <role>developer</role>
-            </roles>
-            <timezone>-5</timezone>
-        </developer>
-        <developer>
-            <id>fnnati</id>
-            <name>Frantz Nati</name>
-            <roles>
-                <role>architect</role>
-                <role>developer</role>
-            </roles>
-            <timezone>-5</timezone>
-        </developer>
-        <developer>
-            <id>kmeiler</id>
-            <name>Kyle Meiler</name>
-            <roles>
-                <role>architect</role>
-                <role>developer</role>
-            </roles>
-            <timezone>-5</timezone>
-        </developer>
-    </developers>
-    <dependencies>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>14</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-fxml</artifactId>
-            <version>14</version>
-        </dependency>
-        <dependency>
+	
+	<repositories>
+	  <repository>
+	    <id>charm-glisten</id>
+	    <name>charm-glisten Repository</name>
+	    <url>https://nexus.gluonhq.com/nexus/content/repositories/releases/</url>
+	    <layout>default</layout>
+	  </repository>
+	</repositories>
+	<dependencies>
+	    <dependency>
+	        <groupId>org.openjfx</groupId>
+	        <artifactId>javafx-controls</artifactId>
+	        <version>11.0.2</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.openjfx</groupId>
+	        <artifactId>javafx-fxml</artifactId>
+	        <version>11.0.2</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.openjfx</groupId>
+	        <artifactId>javafx-base</artifactId>
+	        <version>11.0.2</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.openjfx</groupId>
+	        <artifactId>javafx-graphics</artifactId>
+	        <version>11.0.2</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>com.jfoenix</groupId>
+	        <artifactId>jfoenix</artifactId>
+	        <version>9.0.9</version>
+	    </dependency>
+	    <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20200518</version>
         </dependency>
-        <dependency>
-		    <groupId>com.jfoenix</groupId>
-		    <artifactId>jfoenix</artifactId>
-		    <version>9.0.10</version>
-		</dependency>
-    </dependencies>
+	</dependencies>
     <build>
         <plugins>
             <plugin>
@@ -92,13 +73,38 @@ SimpleJSON: an improved version of https://github.com/fangyidong/json-simple. It
                 </configuration>
             </plugin>
             <plugin>
+			    <groupId>org.openjfx</groupId>
+			    <artifactId>javafx-maven-plugin</artifactId>
+			    <version>0.0.4</version>
+			    <configuration>
+			        <options>
+			        <option>--add-opens</option>
+			        <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
+			        <option>--add-opens</option>
+			        <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
+			        <option>--add-exports</option>
+			        <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
+			        <option>--add-exports</option>
+			        <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
+			        <option>--add-exports</option>
+			        <option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
+			        <option>--add-exports</option>
+			        <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
+			        <option>--add-exports</option>
+			        <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
+			        </options>
+			        <mainClass>com.papa247.john.App</mainClass>
+			    </configuration>
+			</plugin>
+            <!-- <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
                 <configuration>
                     <mainClass>com.papa247.john.App</mainClass>
                 </configuration>
-            </plugin>
+            </plugin>-->
+            
         </plugins>
     </build>
 </project>
